Corrected CV header

--- a/public/index.html
+++ b/public/index.html
@@ -419,21 +419,6 @@
 										</div> <!-- end letter wrapper -->
 									</li>
 								</ul>
-
-								<span class="arrow-down">
-									<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-											<defs></defs>
-											<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
-															<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
-																	<g id="Capa_1">
-																			<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
-																	</g>
-															</g>
-													</g>
-											</g>
-									</svg>
-								</span>
 							</div>
 						</header>
 
@@ -575,21 +560,6 @@
 										</div> <!-- end letter wrapper -->
 									</li>
 								</ul>
-
-								<span class="arrow-down">
-									<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-											<defs></defs>
-											<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
-															<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
-																	<g id="Capa_1">
-																			<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
-																	</g>
-															</g>
-													</g>
-											</g>
-									</svg>
-								</span>
 							</div>
 						</header>
 
@@ -705,21 +675,6 @@
 										</div> <!-- end letter wrapper -->
 									</li>
 								</ul>
-
-								<span class="arrow-down">
-									<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-											<defs></defs>
-											<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
-															<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
-																	<g id="Capa_1">
-																			<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
-																	</g>
-															</g>
-													</g>
-											</g>
-									</svg>
-								</span>
 							</div>
 						</header>
 
@@ -804,53 +759,11 @@
 									</li>
 
 									<li class="layer" data-depth="2.00">
-										<div class="letter-wrapper cv-bg">
-
-											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
-												<defs>
-													<filter id="goo">
-														<feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-														<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
-														<feComposite in="SourceGraphic" in2="goo" operator="atop"/>
-													</filter>
-												</defs>
-											</svg>
-											<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-												 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
-
-												 <g id="ess" class="letter-path active">
-
-													<defs>
-														<pattern patternUnits="userSpaceOnUse" id="image4" x="0%" y="0%" height="100%" width="100%"
-																		 viewBox="0 0 282 282">
-															<image x="-5%" y="0" width="590" height="460" xlink:href="/images/svg/cv.jpg"></image>
-														</pattern>
-													</defs>
-
-													<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-															<g id="cv" transform="translate(-553.000000, -189.000000)" fill="#000000">
-																	<path fill="url(#image4)" d="M802.5253,289.252197 C794.915359,279.987921 785.568507,272.874387 774.484462,267.911382 C763.400418,262.948378 750.579515,260.466912 736.021367,260.466912 C721.46322,260.466912 707.980592,263.27924 695.57308,268.903978 C683.165568,274.528717 672.412552,282.38669 663.31371,292.478134 C654.214867,302.569577 647.101334,314.563325 641.972896,328.459739 C636.844457,342.356152 634.280276,357.410375 634.280276,373.622857 C634.280276,390.166207 636.844457,405.303144 641.972896,419.034124 C647.101334,432.765104 654.132152,444.676137 663.065561,454.767581 C671.998969,464.859024 682.503839,472.716997 694.580484,478.341736 C706.657129,483.966475 719.643464,486.778802 733.539877,486.778802 C749.421493,486.778802 763.483129,483.470182 775.725207,476.852842 C787.967286,470.235502 798.058578,460.971365 805.999386,449.060154 L870.518126,497.20106 C855.629111,518.04568 836.769976,533.430765 813.940154,543.356774 C791.110331,553.282784 767.619127,558.245714 743.465837,558.245714 C716.003877,558.245714 690.692932,553.944508 667.532243,545.341966 C644.371553,536.739424 624.354401,524.414814 607.480184,508.367765 C590.605968,492.320716 577.454202,472.882572 568.024493,450.05275 C558.594784,427.222927 553.88,401.746551 553.88,373.622857 C553.88,345.499163 558.594784,320.022787 568.024493,297.192965 C577.454202,274.363142 590.605968,254.924998 607.480184,238.877949 C624.354401,222.8309 644.371553,210.50629 667.532243,201.903748 C690.692932,193.301206 716.003877,189 743.465837,189 C753.391847,189 763.731285,189.909871 774.484462,191.729639 C785.23764,193.549407 795.825224,196.44445 806.247535,200.414854 C816.669845,204.385258 826.678421,209.67905 836.273564,216.29639 C845.868706,222.91373 854.471119,231.01985 862.08106,240.614992 L802.5253,289.252197 Z" id="C"></path>
-															</g>
-													</g>
-											</svg>
+										<div class="cv-bg">
+											<img src="/images/cv/moi.png" alt="moi">
 										</div> <!-- end letter wrapper -->
 									</li>
 								</ul>
-
-								<span class="arrow-down">
-									<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-											<defs></defs>
-											<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
-															<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
-																	<g id="Capa_1">
-																			<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
-																	</g>
-															</g>
-													</g>
-											</g>
-									</svg>
-								</span>
 							</div>
 						</header>
 
