Inital responsive styling

--- a/public/index.html
+++ b/public/index.html
@@ -833,6 +833,7 @@
 
 						<div class="cv__links">
 							<a href="https://www.linkedin.com/in/anton-ranestam-75343218" target="_blank">Linkedin</a>
+							<a href="" target="_blank">Print</a>
 						</div>
 					</div>
 
