Start responsive behaviour

--- a/public/index.html
+++ b/public/index.html
@@ -156,6 +156,7 @@
 
 						<li class="layer" data-depth="3.00">
 							<iframe class="start__bg" data-src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+							<img class="touch-bg" data-src="/graphics/front.gif" alt="touch">
 						</li>
 
 						<li class="layer" data-depth="-0.5">
