Fixed filter svg issue for iOS on medium screens sizes.
Also more responsive behaviour besides bugfixing

--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,8 @@
 
 						<li class="layer" data-depth="3.00">
 							<iframe class="start__bg" data-src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-							<img class="touch-bg" data-src="/graphics/front.gif" alt="touch">
+							<img class="touch-bg" data-src="/graphics/front.png" alt="touch">
+							<img class="touch-bg touch-bg-two" data-src="/graphics/front.png" alt="touch">
 						</li>
 
 						<li class="layer" data-depth="-0.5">
@@ -331,7 +332,7 @@
 											<defs>
 												<pattern patternUnits="userSpaceOnUse" id="image3" x="0%" y="0%" height="100%" width="100%"
 																 viewBox="0 0 512 512">
-													<image x="-20%" y="0" width="750" height="500" xlink:href="images/svg/ess.jpg"></image>
+													<image x="-20%" y="0" width="750" height="500" xlink:href="/images/svg/ess.jpg"></image>
 												</pattern>
 											</defs>
 
