CV polish and overhaul of menu.

--- a/public/index.html
+++ b/public/index.html
@@ -83,32 +83,28 @@
 			</header>
 
 			<section class="menu">
-				<div class="menu__item" data-color="yellow-red">
-					<div class="menu__item__inner">
+				<nav class="menu__nav">
+					<li class="cases-menu-item">
 						<a href="#cases">
 							<h2>Cases</h2>
 							<h4>Work that I'm proud of.</h4>
 						</a>
-					</div>
-				</div>
+					</li>
 
-				<div class="menu__item" data-color="blue-purple">
-					<div class="menu__item__inner">
+					<li class="cv-menu-item">
 						<a href="#cv">
 							<h2>CV</h2>
 							<h4>How it all started...</h4>
 						</a>
-					</div>
-				</div>
+					</li>
 
-				<div class="menu__item" data-color="blue-red">
-					<div class="menu__item__inner">
+					<li>
 						<a href="mailto:anton@ranestam.se">
 							<h2>Contact</h2>
 							<h4>Get in touch!</h4>
 						</a>
-					</div>
-				</div>
+					</li>
+				</nav>
 			</section>
 
 			<div class="reveal">
@@ -764,6 +760,10 @@
 										<div class="cv-bg">
 											<img src="/images/cv/moi.png" alt="moi">
 										</div> <!-- end letter wrapper -->
+									</li>
+
+									<li class="layer" data-depth="1.5">
+										<span class="cv__rectangle"></span>
 									</li>
 								</ul>
 							</div>
