More responsive behaviour

--- a/public/index.html
+++ b/public/index.html
@@ -156,6 +156,10 @@
 							<img class="touch-bg touch-bg-two" data-src="/graphics/front.png" alt="touch">
 						</li>
 
+						<li class="layer" data-depth="5.00">
+							<img class="touch-bg fade" data-src="/graphics/front.png" alt="touch">
+						</li>
+
 						<li class="layer" data-depth="-0.5">
 							<div class="start__text">
 								<h1>
