Fixed file paths for all images & graphics

--- a/public/index.html
+++ b/public/index.html
@@ -152,12 +152,11 @@
 
 						<li class="layer" data-depth="3.00">
 							<iframe class="start__bg" data-src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-							<img class="touch-bg" data-src="/graphics/front.png" alt="touch">
-							<img class="touch-bg touch-bg-two" data-src="/graphics/front.png" alt="touch">
+							<img class="touch-bg" data-src="graphics/front.png" alt="touch">
 						</li>
 
 						<li class="layer" data-depth="5.00">
-							<img class="touch-bg fade" data-src="/graphics/front.png" alt="touch">
+							<img class="touch-bg fade" data-src="graphics/front.png" alt="touch">
 						</li>
 
 						<li class="layer" data-depth="-0.5">
@@ -219,7 +218,7 @@
 					</ul>
 
 					<audio id="song" loop>
-						<source data-src="/music/aphextwin3.mp3" type="audio/mpeg">
+						<source data-src="music/aphextwin3.mp3" type="audio/mpeg">
 					</audio>
 				</section>
 
@@ -332,7 +331,7 @@
 											<defs>
 												<pattern patternUnits="userSpaceOnUse" id="image3" x="0%" y="0%" height="100%" width="100%"
 																 viewBox="0 0 512 512">
-													<image x="-20%" y="0" width="750" height="500" xlink:href="/images/svg/ess.jpg"></image>
+													<image x="-20%" y="0" width="750" height="500" xlink:href="images/svg/ess.jpg"></image>
 												</pattern>
 											</defs>
 
@@ -404,7 +403,7 @@
 												 <defs>
 													 <pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
 																		viewBox="0 0 512 512">
-														 <image x="-90%" y="-1%" width="830" height="500" xlink:href="/images/svg/orkester.jpg"></image>
+														 <image x="-90%" y="-1%" width="830" height="500" xlink:href="images/svg/orkester.jpg"></image>
 													 </pattern>
 												 </defs>
 												 <g id="Mask">
@@ -430,18 +429,18 @@
 							<p>This booking sytem was built for Malmö stadsteater(MST), Skånes dansteater(STD), Malmö live(ML) & Malmö opera(MO).
 								This was a project in a huge sprint with a goal of redoing all 4 respective websites and launching a new booking system with the Tessitura platform.</p>
 
-							<img class="animate-img" data-src="/images/booking/pic.png" alt="intro">
+							<img class="animate-img" data-src="images/booking/pic.png" alt="intro">
 
 							<h2>My role</h2>
 							<p>I was in charge of the design, UX and frontend as far as HTML / CSS goes. This was a very challenging task with alot of user stories to take into account.</p>
 
-							<img class="animate-img" data-src="/images/booking/pic1.png" alt="role">
+							<img class="animate-img" data-src="images/booking/pic1.png" alt="role">
 
 							<h2>4 Websites - 1 module</h2>
 							<p>One of the key focuses was making a good e-commerce experience on mobile, since the old design wasn't designed for small screens this was a huge blocker regarding sales.
 								We put our focus not only on making it look good, but also making the performance good using the latest web techniques.</p>
 
-							<img class="case__vis animate-img" data-src="/images/booking/vis.png" alt="visualize">
+							<img class="case__vis animate-img" data-src="images/booking/vis.png" alt="visualize">
 
 							<h2>The solution</h2>
 							<p>I first tried to crack the conundrum on how to have the same design for four visually different sites and still assure the user that they're still on the same site.
@@ -461,16 +460,16 @@
 							This was solved with the in house term: "One the thing at the time"</p>
 
 							<div data-0="opacity:0;" data-1000="opacity:1;">
-								<img class="case__flow animate-img" data-src="/images/booking/bitmap.png" alt="booking-one">
-								<img class="case__flow animate-img" data-src="/images/booking/bitmap2.png" alt="booking-two">
-								<img class="case__flow animate-img" data-src="/images/booking/bitmap3.png" alt="booking-three">
-								<img class="case__flow animate-img" data-src="/images/booking/bitmap4.png" alt="booking-four">
-								<img class="case__flow animate-img" data-src="/images/booking/bitmap5.png" alt="booking-five">
+								<img class="case__flow animate-img" data-src="images/booking/bitmap.png" alt="booking-one">
+								<img class="case__flow animate-img" data-src="images/booking/bitmap2.png" alt="booking-two">
+								<img class="case__flow animate-img" data-src="images/booking/bitmap3.png" alt="booking-three">
+								<img class="case__flow animate-img" data-src="images/booking/bitmap4.png" alt="booking-four">
+								<img class="case__flow animate-img" data-src="images/booking/bitmap5.png" alt="booking-five">
 							</div>
 							<h2>Semi responsive</h2>
 							<p>The term "mobile booking" would make anyone cringe, but to be able to have intial good responsive booking behaviour was one of the goals for this project.</p>
 
-							<img class="last-pic animate-img" data-src="/images/booking/b_mock2.png" alt="responsive">
+							<img class="last-pic animate-img" data-src="images/booking/b_mock2.png" alt="responsive">
 						</article>
 					</div>
 
@@ -530,7 +529,7 @@
 		 											<defs>
 		 												<pattern patternUnits="userSpaceOnUse" id="image2" x="0%" y="0%" height="100%" width="100%"
 		 																 viewBox="0 0 512 512">
-		 													<image x="-20%" y="0" width="750" height="500" xlink:href="/images/svg/og.jpg"></image>
+		 													<image x="-20%" y="0" width="750" height="500" xlink:href="images/svg/og.jpg"></image>
 		 												</pattern>
 		 											</defs>
 
@@ -570,32 +569,32 @@
 							<h2>Intro</h2>
 							<p>Olsson & Gerthel is an interior design shop that supplies the design interested people across the country with furniture and gifts from prominent suppliers.</p>
 
-							<img class="animate-img" data-src="/images/og/1.jpg" alt="intro">
+							<img class="animate-img" data-src="images/og/1.jpg" alt="intro">
 
 							<h2>My role</h2>
 							<p>To design and build the front end of an e-commerce site that inspires and showcases the highest quality of interior design.</p>
 
-							<img class="animate-img" data-src="/images/og/2.png" alt="role">
+							<img class="animate-img" data-src="images/og/2.png" alt="role">
 
 							<h2>Mobile friendly e-commerce</h2>
 							<p>One of the key focuses was making a good e-commerce experience on mobile, since the old design wasn't designed for small screens this was a huge blocker regarding sales.
 								We put our focus not only on making it look good, but also making the performance good using the latest web techniques.</p>
 
-							<img class="case__big animate-img" data-src="/images/og/3.png" alt="visualize">
+							<img class="case__big animate-img" data-src="images/og/3.png" alt="visualize">
 
 							<h2>Clear overview</h2>
 							<p>One of the biggest issues to solve was the need of a clear overview, in the e-commerce world, it's fast consumption of content and the user want's a clear overview
 								of all the products. The site features an advanced filter with a nice grid view to showcase the furniture/design item in their right "habitat".</p>
 
 							<div>
-								<img class="case__flow animate-img" data-src="/images/og/4.png" alt="og-one">
-								<img class="case__flow animate-img" data-src="/images/og/5.png" alt="og-two">
+								<img class="case__flow animate-img" data-src="images/og/4.png" alt="og-one">
+								<img class="case__flow animate-img" data-src="images/og/5.png" alt="og-two">
 							</div>
 
 							<h2>Product pages with depth</h2>
 							<p>After the user has made their decision to look into a product, it's time to inspire them so they might buy the product. Each product page features a
 								big image displaying the product, below that we feature facts about the product and at the bottom we feature inspiring images.</p>
-							<img class="case__flow animate-img" data-src="/images/og/6.png" alt="og-three">
+							<img class="case__flow animate-img" data-src="images/og/6.png" alt="og-three">
 
 						</article>
 					</div>
@@ -656,7 +655,7 @@
 		 											<defs>
 		 												<pattern patternUnits="userSpaceOnUse" id="image3" x="0%" y="0%" height="100%" width="100%"
 		 																 viewBox="0 0 512 512">
-		 													<image x="-20%" y="0" width="750" height="500" xlink:href="/images/svg/ess.jpg"></image>
+		 													<image x="-20%" y="0" width="750" height="500" xlink:href="images/svg/ess.jpg"></image>
 		 												</pattern>
 		 											</defs>
 
@@ -687,13 +686,13 @@
 								This new facility will be around 30 times brighter than today's leading facilities,
 								enabling new opportunities for researchers in the fields of life sciences, energy, environmental technology, cultural heritage and fundamental physics.</p>
 
-							<img class="animate-img" data-src="/images/ess/1.jpg" alt="intro">
+							<img class="animate-img" data-src="images/ess/1.jpg" alt="intro">
 
 							<h2>My role</h2>
 							<p>To improve the old intranet with a new clean design that follows the ESS graphical profile.
 								Also to improve the usability and make the consumption of content easier and faster.</p>
 
-							<img class="animate-img" data-src="/images/ess/2.png" alt="role">
+							<img class="animate-img" data-src="images/ess/2.png" alt="role">
 
 							<h2>Mobile overhaul</h2>
 							<p>Making the mobile experience better was very important for this project, and I had an idea of fast and easy content consumption from the start.
@@ -701,7 +700,7 @@
 							On a small screen/device the site is split up into sections that is accessible via a small menu at the bottom or via swipe gestures.
 							The main content is always displayed in the middle and the "second" content is displayed to the right & left.</p>
 
-							<img class="case__big animate-img" data-src="/images/ess/3.png" alt="visualize">
+							<img class="case__big animate-img" data-src="images/ess/3.png" alt="visualize">
 
 							<h2>Never loose context</h2>
 							<p>One of the main problems with the old intranet was the feeling of getting lost. You didn't know where you were and how you got back.
@@ -711,15 +710,15 @@
 								A group activity feed is always being displayed to also show the user what groups they're currently in.</p>
 
 							<div>
-								<img class="case__flow animate-img" data-src="/images/ess/4.png" alt="ess-one">
-								<img class="case__flow animate-img" data-src="/images/ess/5.png" alt="ess-two">
+								<img class="case__flow animate-img" data-src="images/ess/4.png" alt="ess-one">
+								<img class="case__flow animate-img" data-src="images/ess/5.png" alt="ess-two">
 							</div>
 
 							<h2>Contribution of Content</h2>
 							<p>Contribution of content was also a very big problem that was needed to be solved. We went with a modal solution for
 								this since we didn't want the user to lose the context of where they are. The flow of contributing content is
 								always in a modal, and the post is saved via AJAX.</p>
-							<img class="case__flow animate-img" data-src="/images/ess/6.png" alt="ess-three">
+							<img class="case__flow animate-img" data-src="images/ess/6.png" alt="ess-three">
 
 						</article>
 					</div>
@@ -762,7 +761,7 @@
 
 									<li class="layer" data-depth="2.00">
 										<div class="cv-bg">
-											<img src="/images/cv/moi.png" alt="moi">
+											<img src="images/cv/moi.png" alt="moi">
 										</div> <!-- end letter wrapper -->
 									</li>
 
@@ -777,7 +776,7 @@
 
 							<div class="year year--right">
 
-								<img class="animate-img cv__image cv__image--right" data-src="/images/cv/1.jpg" alt="one">
+								<img class="animate-img cv__image cv__image--right" data-src="images/cv/1.jpg" alt="one">
 								<h2 class="year-title">1993</h2>
 								<div class="year__inner">
 									<h2>So it begins...</h2>
@@ -787,7 +786,7 @@
 
 							<div class="year year--left">
 
-								<img class="animate-img cv__image cv__image--left" data-src="/images/cv/2.jpg" alt="two">
+								<img class="animate-img cv__image cv__image--left" data-src="images/cv/2.jpg" alt="two">
 								<h2 class="year-title">2005</h2>
 
 									<div class="year__inner">
@@ -800,7 +799,7 @@
 							</div>
 
 							<div class="year year--right">
-								<img class="animate-img cv__image cv__image--right" data-src="/images/cv/3.jpg" alt="three">
+								<img class="animate-img cv__image cv__image--right" data-src="images/cv/3.jpg" alt="three">
 								<h2 class="year-title">2009</h2>
 								<div class="year__inner">
 									<h2>Dreamin...</h2>
@@ -812,7 +811,7 @@
 
 							<div class="year year--left">
 
-								<img class="animate-img cv__image cv__image--left" data-src="/images/cv/4.jpg" alt="four">
+								<img class="animate-img cv__image cv__image--left" data-src="images/cv/4.jpg" alt="four">
 								<h2 class="year-title">2012</h2>
 									<div class="year__inner">
 										<h4>Aug 2012 - July 2016</h4>
@@ -824,7 +823,7 @@
 
 							<div class="year year--right">
 
-								<img class="animate-img cv__image cv__image--right" data-src="/images/cv/5.jpg" alt="five">
+								<img class="animate-img cv__image cv__image--right" data-src="images/cv/5.jpg" alt="five">
 								<h2 class="year-title">2016</h2>
 
 								<div class="year__inner">
