More responsive behaviour

--- a/public/index.html
+++ b/public/index.html
@@ -451,7 +451,7 @@
 
 							<ul class="big-pic">
 								<li class="layer" data-depth="-5.00" >
-									<img data-src="/images/booking/b_mock1.png" alt="intro">
+									<img data-src="images/booking/b_mock1.png" alt="intro">
 								</li>
 							</ul>
 
