Added scroll indicator for small screens and minor small screen fixes

--- a/public/index.html
+++ b/public/index.html
@@ -248,6 +248,15 @@
 					</nav>
 
 					<div class="cases__wrapper">
+						<svg class="scroll-indicator" width="299px" height="216px" viewBox="0 0 299 216" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						    <defs></defs>
+						    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+						        <g id="Group" fill="#E7EAEF">
+						            <path d="M179.137,101.93 L115.137,37.93 C111.23,34.024 104.898,34.024 100.996,37.93 C97.09,41.836 97.09,48.164 100.996,52.071 L147.922,99 L-23,99 C-28.523,99 -33,103.477 -33,109 C-33,114.524 -28.523,119 -23,119 L147.922,119 L100.996,165.93 C97.09,169.836 97.09,176.164 100.996,180.071 C102.949,182.024 105.508,183 108.066,183 C110.625,183 113.188,182.024 115.137,180.071 L179.137,116.071 C183.043,112.164 183.043,105.836 179.137,101.93 Z" id="arrows" transform="translate(75.000000, 108.500000) rotate(-270.000000) translate(-75.000000, -108.500000) "></path>
+						            <path d="M328.637,101.43 L264.637,37.43 C260.73,33.524 254.398,33.524 250.496,37.43 C246.59,41.336 246.59,47.664 250.496,51.571 L297.422,98.5 L126.5,98.5 C120.977,98.5 116.5,102.977 116.5,108.5 C116.5,114.024 120.977,118.5 126.5,118.5 L297.422,118.5 L250.496,165.43 C246.59,169.336 246.59,175.664 250.496,179.571 C252.449,181.524 255.008,182.5 257.566,182.5 C260.125,182.5 262.688,181.524 264.637,179.571 L328.637,115.571 C332.543,111.664 332.543,105.336 328.637,101.43 Z" id="arrows" transform="translate(224.500000, 108.000000) rotate(-90.000000) translate(-224.500000, -108.000000) "></path>
+						        </g>
+						    </g>
+						</svg>
 
 						<ul class="cases__wrapper__article section">
 
