--- a/public/index.html
+++ b/public/index.html
@@ -479,6 +479,9 @@
 							<p>The term "mobile booking" would make anyone cringe, but to be able to have intial good responsive booking behaviour was one of the goals for this project.</p>
 
 							<img class="last-pic animate-img" data-src="images/booking/b_mock2.png" alt="responsive">
+
+							<h2>Result</h2>
+							<p>Before this project sales via the web was around 30-35% for all companies (2015). After the project launch sales saw a huge spike in sales, and after 8 months the project has settled and we can now see sales increase of 40-50% on average for all companies, meaning that ticket sales are now at a steady 80-85% via the web.</p>
 						</article>
 					</div>
 
@@ -576,7 +579,7 @@
 						<article class="case__body">
 
 							<h2>Intro</h2>
-							<p>Olsson & Gerthel is an interior design shop that supplies the design interested people across the country with furniture and gifts from prominent suppliers.</p>
+							<p>Olsson & Gerthel is an interior design shop that supplies design interested people across the country with furniture and gifts from prominent suppliers.</p>
 
 							<img class="animate-img" data-src="images/og/1.jpg" alt="intro">
 
@@ -592,7 +595,7 @@
 							<img class="case__big animate-img" data-src="images/og/3.png" alt="visualize">
 
 							<h2>Clear overview</h2>
-							<p>One of the biggest issues to solve was the need of a clear overview, in the e-commerce world, it's fast consumption of content and the user want's a clear overview
+							<p>One of the biggest issues to solve was the need of a clear overview, in the e-commerce world, the rule is fast consumption of content and the a clear overview
 								of all the products. The site features an advanced filter with a nice grid view to showcase the furniture/design item in their right "habitat".</p>
 
 							<div>
@@ -715,7 +718,7 @@
 							<p>One of the main problems with the old intranet was the feeling of getting lost. You didn't know where you were and how you got back.
 								Our overhaul ensures that the user always has an easy way of either getting back or consume more content from the groups they are a part of.
 								<br />
-								The header features a useful links section, a search function & a your groups section and tat is always visible.
+								The header features a useful links section, a search function & your groups section.
 								A group activity feed is always being displayed to also show the user what groups they're currently in.</p>
 
 							<div>
@@ -789,7 +792,7 @@
 								<h2 class="year-title">1993</h2>
 								<div class="year__inner">
 									<h2>So it begins...</h2>
-									<p>Born in Malmö 15 January 1993 - to a loving father and mother with 3 siblings.</p>
+									<p>Born in Malmö 15 January 1993 - to a loving father, mother and with 3 brothers.</p>
 								</div>
 							</div>
 
@@ -803,7 +806,7 @@
 										<p>As a child I’ve always been intrested in doing things, more accurate, creative things.
 											Everything from building lego to drawing. 
 											My intreset in websites and digital design started when i was 13 years old when my father showed me frontpage 97,
-											a humble beginning.</p>
+											a humble beginning...</p>
 									</div>
 							</div>
 
@@ -813,8 +816,7 @@
 								<div class="year__inner">
 									<h2>Dreamin...</h2>
 									<p>Started upper secondary school at age 16
-										with a focus on all things Media.
-										This is where I started to take things more serious.</p>
+										with a focus on all things Media.</p>
 								</div>
 							</div>
 
@@ -840,7 +842,7 @@
 									<h2>Berliner</h2>
 									<p>After 4 years at Odd Hill I started at Ming Labs as a designer.
 										Worked there for ca 3 months - though things didn’t quite work out as I planned I learned a lot.
-										I Worked with clients as Dibolt Nixdorf, Luft Hansa etc.</p>
+										I worked with clients like Dibolt Nixdorf, Luft Hansa etc</p>
 									</div>
 							</div>
 						</article>
