Bug fixes and copy fixes.

--- a/public/index.html
+++ b/public/index.html
@@ -803,9 +803,9 @@
 
 									<div class="year__inner">
 										<h2>Golden Year</h2>
-										<p>As a child I’ve always been intrested in doing things, more accurate, creative things.
+										<p>As a child I’ve always been interested in doing things, more accurate, creative things.
 											Everything from building lego to drawing. 
-											My intreset in websites and digital design started when i was 13 years old when my father showed me frontpage 97,
+											My interest in websites and digital design started when i was 13 years old when my father showed me Frontpage 97,
 											a humble beginning...</p>
 									</div>
 							</div>
