Removed “-“ in first slider and added resume link on cv

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
 										<ul>
 											<li class="start__text__1"><span>A</span><span>n</span><span>t</span><span>o</span><span>n</span></li>
 											<li class="start__text__2"><span>R</span><span>a</span><span>n</span><span>e</span><span>s</span><span>t</span><span>a</span><span>m</span></li>
-											<li class="start__text__3"><span>I</span><span>N</span><span>F</span><span>P</span><span>-</span><span>T</span> </li>
+											<li class="start__text__3"><span>I</span><span>N</span><span>F</span><span>P</span><span>&nbsp;</span><span>T</span> </li>
 											<li class="start__text__4"><span>D</span><span>e</span><span>s</span><span>i</span><span>g</span><span>n</span><span>e</span><span>r</span></li>
 											<li class="start__text__5"><span>C</span><span>r</span><span>e</span><span>a</span><span>t</span><span>i</span><span>v</span><span>e</span> </li>
 											<li class="start__text__6"><span>C</span><span>o</span><span>d</span><span>e</span><span>r</span></li>
@@ -850,7 +850,7 @@
 
 						<div class="cv__links">
 							<a href="https://www.linkedin.com/in/anton-ranestam-75343218" target="_blank">Linkedin</a>
-							<a href="" target="_blank">Print</a>
+							<a href="/resume.pdf" target="_blank">Resumé</a>
 						</div>
 					</div>
 
