--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,31 @@
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-
 		<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/44f6deba-4325-4daf-a313-cdabbeae99b8.css"/>
 
 	<body style="overflow: hidden;">
 
 		<section class="loader">
-			<div class="loader__inner">
+
+			<div class="start-loader__inner" style="display: none;">
+				<svg class="loader__svg" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="-50 -50 244 265"><title>Loader</title><desc>Lines arranged in a circle</desc><g><path class="line-1" stroke-width="2" stroke="#FFF" fill="#FFF" opacity=".9"d="M72.7 0.6L72.7 0.6C74.8 0.6 76.4 2.4 76.4 4.6L76.4 36.6C76.4 38.8 74.8 40.6 72.7 40.6 70.7 40.6 69.1 38.8 69.1 36.6L69.1 4.6C69.1 2.4 70.7 0.6 72.7 0.6"/><path class="line-2" stroke-width="2" stroke="#FFF" opacity="0.8" fill="#FFF" d="M137.8 40.6C137.1 40.6 136.4 40.8 135.7 41.2L107.5 58.2C105.6 59.4 104.9 62 106 64 106.8 65.3 108.1 66.1 109.6 66.1 110.2 66.1 110.9 65.9 111.6 65.5L139.8 48.5C141.8 47.4 142.4 44.8 141.3 42.7 140.6 41.4 139.2 40.6 137.8 40.6"/><path class="line-3" stroke-width: "2" stroke="#FFF" opacity="0.6" fill="#FFF" d="M109.6 102.5C108.1 102.5 106.8 103.3 106 104.6 104.9 106.7 105.6 109.3 107.5 110.5L135.7 127.4C136.4 127.8 137.1 128 137.8 128 139.2 128 140.6 127.3 141.3 125.9 142.4 123.9 141.8 121.3 139.8 120.1L111.6 103.1C110.9 102.7 110.2 102.5 109.6 102.5"/><path class="line-4" stroke-width="2" stroke="#FFF" opacity="0.6" fill="#FFF" d="M72.7 124.4C70.7 124.4 69.1 126.2 69.1 128.4L69.1 160.4C69.1 162.6 70.7 164.4 72.7 164.4 74.8 164.4 76.4 162.6 76.4 160.4L76.4 128.4C76.4 126.2 74.8 124.4 72.7 124.4"/><path class="line-5" stroke-width="2" stroke="#FFF" opacity="0.4" fill="#FFF" d="M32.3 102.5C31.6 102.5 30.9 102.7 30.3 103.1L2 120.1C0.1 121.3-0.6 123.9 0.5 125.9 1.3 127.3 2.7 128 4.1 128 4.8 128 5.5 127.8 6.1 127.4L34.3 110.5C36.3 109.3 37 106.7 35.8 104.6 35.1 103.3 33.7 102.5 32.3 102.5"/><path class="line-6" stroke-width="2" stroke="#FFF" opacity="0.2" fill="#FFF" d="M4.1 40.6C2.7 40.6 1.3 41.4 0.5 42.7 -0.6 44.8 0.1 47.4 2 48.5L30.3 65.5C30.9 65.9 31.6 66.1 32.3 66.1 33.7 66.1 35.1 65.3 35.8 64 37 62 36.3 59.4 34.3 58.2L6.1 41.2C5.5 40.8 4.8 40.6 4.1 40.6"/></g></svg>
+				<div class="text-cut">
+
+					<ul>
+						<li class="text-cut__1">
+							<h1>Welcome to <br /> my portfolio… who am I?</h1>
+						</li>
+						<li class="text-cut__2">
+							<h1>Anton Ranestam <br /> Designer from Malmö Sweden...</h1>
+						</li>
+						<li class="text-cut__2">
+							<h1>Everything has loaded <br /> let's go!</h1>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="loader__inner" style="display: none;">
 				<svg class="loader__svg" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="-50 -50 244 265"><title>Loader</title><desc>Lines arranged in a circle</desc><g><path class="line-1" stroke-width="2" stroke="#FFF" fill="#FFF" opacity=".9"d="M72.7 0.6L72.7 0.6C74.8 0.6 76.4 2.4 76.4 4.6L76.4 36.6C76.4 38.8 74.8 40.6 72.7 40.6 70.7 40.6 69.1 38.8 69.1 36.6L69.1 4.6C69.1 2.4 70.7 0.6 72.7 0.6"/><path class="line-2" stroke-width="2" stroke="#FFF" opacity="0.8" fill="#FFF" d="M137.8 40.6C137.1 40.6 136.4 40.8 135.7 41.2L107.5 58.2C105.6 59.4 104.9 62 106 64 106.8 65.3 108.1 66.1 109.6 66.1 110.2 66.1 110.9 65.9 111.6 65.5L139.8 48.5C141.8 47.4 142.4 44.8 141.3 42.7 140.6 41.4 139.2 40.6 137.8 40.6"/><path class="line-3" stroke-width: "2" stroke="#FFF" opacity="0.6" fill="#FFF" d="M109.6 102.5C108.1 102.5 106.8 103.3 106 104.6 104.9 106.7 105.6 109.3 107.5 110.5L135.7 127.4C136.4 127.8 137.1 128 137.8 128 139.2 128 140.6 127.3 141.3 125.9 142.4 123.9 141.8 121.3 139.8 120.1L111.6 103.1C110.9 102.7 110.2 102.5 109.6 102.5"/><path class="line-4" stroke-width="2" stroke="#FFF" opacity="0.6" fill="#FFF" d="M72.7 124.4C70.7 124.4 69.1 126.2 69.1 128.4L69.1 160.4C69.1 162.6 70.7 164.4 72.7 164.4 74.8 164.4 76.4 162.6 76.4 160.4L76.4 128.4C76.4 126.2 74.8 124.4 72.7 124.4"/><path class="line-5" stroke-width="2" stroke="#FFF" opacity="0.4" fill="#FFF" d="M32.3 102.5C31.6 102.5 30.9 102.7 30.3 103.1L2 120.1C0.1 121.3-0.6 123.9 0.5 125.9 1.3 127.3 2.7 128 4.1 128 4.8 128 5.5 127.8 6.1 127.4L34.3 110.5C36.3 109.3 37 106.7 35.8 104.6 35.1 103.3 33.7 102.5 32.3 102.5"/><path class="line-6" stroke-width="2" stroke="#FFF" opacity="0.2" fill="#FFF" d="M4.1 40.6C2.7 40.6 1.3 41.4 0.5 42.7 -0.6 44.8 0.1 47.4 2 48.5L30.3 65.5C30.9 65.9 31.6 66.1 32.3 66.1 33.7 66.1 35.1 65.3 35.8 64 37 62 36.3 59.4 34.3 58.2L6.1 41.2C5.5 40.8 4.8 40.6 4.1 40.6"/></g></svg>
 				<p>Loading ze stuff for you</p>
 			</div>
@@ -133,19 +151,7 @@
 					</button>
 
 					<a href="#cases" class="big-btn big-btn--down">
-						<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-						<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								<defs></defs>
-								<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-										<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
-												<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
-														<g id="Capa_1">
-																<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
-														</g>
-												</g>
-										</g>
-								</g>
-						</svg>
+						Cases
 					</a>
 
 					<ul id="start" class="start">
